--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,17 @@
-adthelpers @ git+https://github.com/JakubSido/adthelpers@845dd9a9b6e18ce5341856ed8416fd6e0cd6dd7a
-appnope==0.1.4
-asttokens==2.4.1
-blinker==1.9.0
-bosdyn-api==4.1.1
-bosdyn-choreography-client==4.1.1
-bosdyn-client==4.1.1
-bosdyn-core==4.1.1
-bosdyn-mission==4.1.1
-bosdyn-orbit==4.1.1
+Flask==3.1.1
+Werkzeug==3.1.3
+itsdangerous==2.2.0
+Jinja2==3.1.6
+click==8.2.2
+requests==2.32.3
+SQLAlchemy==2.0.42
+tzdata==2024.1
+typing_extensions==4.14.1
 certifi==2024.12.14
 charset-normalizer==3.4.1
-click==8.2.2
-comm==0.2.1
-contourpy==1.2.0
-cycler==0.12.1
-debugpy==1.8.1
-decorator==5.1.1
-Deprecated==1.2.15
-example_package @ git+https://github.com/JakubSido/example_package.git@58b4b023d61e03e6a619862591db4907fd0f3614
-executing==2.0.1
-Flask==3.1.1
-fonttools==4.50.0
-geographiclib==2.0
-geopy==2.4.1
-grpcio==1.68.1
 idna==3.10
-iniconfig==2.0.0
-ipykernel==6.29.3
-ipython==8.22.2
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.6
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-kiwisolver==1.4.5
-MarkupSafe==3.0.2
-matplotlib==3.8.3
-matplotlib-inline==0.1.6
-nest-asyncio==1.6.0
-networkx==3.3
-numpy==1.26.4
-packaging==23.2
-pandas==2.2.1
-parso==0.8.3
-pexpect==4.9.0
-pillow==10.2.0
-platformdirs==4.2.0
-plotly==5.20.0
-pluggy==1.5.0
-PriorityQueue==1.3.0
-prompt-toolkit==3.0.43
-protobuf==5.29.2
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.17.2
-PyJWT==2.10.1
-pynmea2==1.19.0
-pyparsing==3.1.2
-pytest==8.2.0
-python-dateutil==2.9.0.post0
-pytz==2024.1
-pyzmq==25.1.2
-requests==2.32.3
-seaborn==0.13.2
-six==1.16.0
-spanning==1.0.0
-SQLAlchemy==2.0.42
-stack-data==0.6.3
-tenacity==8.2.3
-tornado==6.4
-tqdm==4.66.2
-traitlets==5.14.1
-typing_extensions==4.14.1
-tzdata==2024.1
 urllib3==2.3.0
-wcwidth==0.2.13
+packaging==23.2
+python-dateutil==2.9.0.post0
+six==1.16.0
 Werkzeug==3.1.3
-wrapt==1.17.0
